--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
         <a href="#"><i class='bx bxl-twitter' ></i></a>
         <a href="#"><i class='bx bxl-linkedin' ></i></a>
       </div>
+
+      <span class="home-imghover"></span>
     </section>
   </body>
 </html>
